# BSupervisor

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml  vercel.json
.agent/: PROMPT.md  progress.txt  tasks.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.override.yml  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_settings_table.py  0003_incidents_and_event_explanation.py
bsupervisor/: config.py  main.py
bsupervisor/api/: anomalies.py  costs.py  deps.py  events.py  incidents.py  reports.py  rule_packs.py  rules.py  schemas.py  settings.py  status.py
bsupervisor/core/: anomaly_detector.py  cost_tracker.py  incident_tracker.py  reporter.py  rule_engine.py  rule_packs.py  seed_rules.py
bsupervisor/models/: __init__.py  audit_event.py  audit_rule.py  base.py  cost_record.py  daily_report.py  database.py  incident.py  settings.py
deploy/: .env.example  Dockerfile  docker-compose.yml
docs/e2e/: anomaly-detection-checklist.md  explainable-block-checklist.md  (+2 more)
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vercel.json  vite.config.ts
tests/: conftest.py  test_anomaly_detection.py  test_api_routes.py  test_auth.py  test_config.py  test_cost_tracker.py  test_events_api.py  test_explainable_block.py  test_incident_timeline.py  test_models.py  test_reporter.py  test_rule_engine.py  test_rule_packs.py  test_seed_rules.py  test_settings_api.py
(+40 files in other folders)
