[project]
name = "bsupervisor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "bsvibe-auth[fastapi] @ git+https://github.com/blas1n/BSVibe-Auth.git@v0.4.0#subdirectory=python",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.coverage.run]
source = ["bsupervisor"]
omit = ["*/migrations/*", "bsupervisor/models/database.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[dependency-groups]
dev = [
    "aiosqlite>=0.22.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.0",
]
